--- a/manuscripts/23-tutorial-don-dags/causal-tutorial-env.tex
+++ b/manuscripts/23-tutorial-don-dags/causal-tutorial-env.tex
@@ -186,9 +186,9 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Causal Inference in Environmental Psychology: Through The Looking Glass of Counterfactual Data Science},
+  pdftitle={Causal Inference in Environmental Psychology},
   pdfkeywords={DAGS, Causal
-Inference, Confounding, History, Psychology, Panel},
+Inference, Confounding, Environmental, Psychology, Panel},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
@@ -196,58 +196,98 @@ Inference, Confounding, History, Psychology, Panel},
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Causal Inference in Environmental Psychology: Through The Looking
-Glass of Counterfactual Data Science}
+\title{Causal Inference in Environmental Psychology}
 \author{Donald W Hine \and Joseph A. Bulbulia}
-\date{2024-01-08}
+\date{2024-01-14}
 
 \begin{document}
 \maketitle
 \begin{abstract}
 Quantifying causal effects from observational data presents substantial
-challenges for environmental psychology researchers because the
-correlations obtained from observational settings can be misleading
-causal guides. Recent progress in methods for causal inference brings
-hope for transforming observational data into causal understanding. In
-this chapter, we provide an accessible introduction to the Potential
-Outcomes Framework of causal inference and Directed Acyclic Graphs
-(DAGs), two tools to help researchers better identify when causation is
-and is not present. We conclude with practical guidelines for data
-collection and modelling, highlighting ``tips'' and ``common pitfalls.''
-This chapter will interest environmental psychology researchers who wish
-to draw stronger causal inferences from data derived from
-non-experimental research designs.
+challenges for environmental psychology, however, recent progress in
+methods for causal inference offers hope. In this chapter, we provide an
+accessible introduction Causal Diagrams, also known as Directed Acyclic
+Graphs (DAGs), which are powerful tools for evaluating evidence for
+causality in observational settings. We start with a conceptual
+introduction to the basic framework of causal inference within which
+causal diagrams find there utility. This non-mathematical introduction
+helps to build intuition for what is needed for obtaining unbiased
+causal effect estimates. We next offer a primer on how to construct
+causal diagrams, focussing on the four elemental causal diagrams from
+which more complicated causal diagrams are built. We conclude with
+practical guidelines for data collection and modelling, highlighting
+``tips'' and ``common pitfalls.'' This chapter will interest
+environmental psychology researchers who wish to draw stronger causal
+inferences from data derived from non-experimental research designs.
 \end{abstract}
+
 \subsection{Introduction}\label{introduction}
 
 Causal inference involves using empirical observations to draw
 conclusions about the causal relationships between variables or events.
 It typically involves determining whether changes in one or more
 independent variables are linked to changes in one or more dependent
-variables, while controlling for potential confounding factors. The aim
-of causal inference is to identify cause-effect relationships with a
+variables, while controlling for potential sources of confounding. The
+aim of causal inference is to identify cause-effect relationships with a
 high level of confidence, understanding the mechanisms underlying these
 relationships, while ruling out plausible alternative explanations
 (\citeproc{ref-cook2002experimental}{Cook \emph{et al.} 2002})
 
-In experimental settings, quantitative causal inferences from
-associational models is made possible through randomisation, controlled
-interventions, and chronologically ordered data collection.
+Causal inference is sometimes characterised as a complex cognitive
+process unique to humans. However, it may be more appropriate to think
+of causal inference as existing throughout the plant and animal kingdoms
+on a spectrum, or potentially multiple spectra, that vary in terms
+conscious awareness and sophistication
+(\citeproc{ref-mancuso2018revolutionary}{Mancuso 2018}). For example,
+plants and microorganisms are genetically preprogrammed to recognise and
+respond to environmental conditions relevant to reproduction and
+survival. Birds and rodents have well-established capacities to learn,
+but not to the level of complexity exhibited by larger mammals and
+primates. During the past several thousand years, humans have developed
+a broad range for frameworks for causal inference such as the law of
+karma in Hindu, Jain, and Buddhist traditions, Aristotle's four
+(material, formal, efficient, and final) causes, early work empiricism
+and experimentation by Francis Bacon and John Locke, Newtonian
+mechanics, as well as more contemporary conceptualisations based on
+counterfactual reasoning such as those described in this chapter.
 
-By contrast, in observational settings, the data researchers collect are
-not the products of randomisation and control. Moreover, observational
-researchers are often limited to cross-sectional data, which lack
-temporal order. In observational settings, then, credible causal
-inference from correlations can be, at best, indirect. The problems of
-inferring causation in observational settings are widely known. However,
-many observational researchers persist in using hedging causal language
-to reporting their results, offering cautious policy recommendations
-couched in words such as ``might'' and ``suggests''
-(\citeproc{ref-bulbulia2022}{Bulbulia 2022}) However, because causal
-association can easily run in the opposite direction of manifest
-associations, every intention to report a observational correlations as
-suggesting causation is more safely presumed guilty unless demonstrated
-otherwise.
+\subsection{Correlation in Psychological
+Research}\label{correlation-in-psychological-research}
+
+As taught in most introductory undergraduate psychology courses,
+correlations between two more variables does not imply the presence of a
+causal process. However, in most psychological research, quantifying a
+causal effect requires drawing inferences based on research design,
+statistical modelling, and correlations present in data.
+
+In experimental settings, quantitative causal inferences from
+associational models are made possible through randomisation, controlled
+interventions, and chronologically ordered data collection. For example,
+even in non-longitudinal experimental studies, manipulations always
+precede the measurement of outcomes. By contrast, in observational
+settings, the data researchers collect are not the products of
+randomisation and control. Moreover, observational researchers are often
+limited to cross-sectional data, which lack temporal order. In
+observational settings, then, credible causal inference from
+correlations can be, at best, indirect. The problems of inferring
+causation in observational settings are widely known. For example, in
+cross-sectional studies, correlations between two variables may be due
+to the presence of a third variable that causes changes in one or both.
+Furthermore, variables can be correlated, but the direction of causation
+can be ambiguous. Variable A may cause variable B? Or B may cause A? In
+the absence of an appropriate research design is may be impossible to
+tell.
+
+Despite this, many observational researchers persist in using hedging
+causal language to reporting their results, offering cautious policy
+recommendations couched in words such as ``might effect'', ``suggestive
+of a causal link'', and ``is consistent with our hypothesis that A
+causes B'' (\citeproc{ref-bulbulia2022}{Bulbulia 2022}). This is true of
+our own work, and also that of many of colleagues in environmental
+psychology. However, because correlations can be caused by unmeasured
+variables and true causal effects, when they exist, can run in the
+opposite direction of the proposed causal model, researchers need to be
+extremely cautious when inferring causal conclusions.
 
 Are there any settings in which we might we obtain valid causal
 inferences from observational data? If so, by which pathways might we
@@ -255,37 +295,38 @@ pursue such inferences?
 
 Environmental psychologists have strong motivations to ask these
 questions. Among the most compelling is an interest in understanding the
-probable effects of interventions on environmental attitudes and
+possible effects of interventions on environmental attitudes and
 behaviours, which is essential for offering effective policy advice.
 Moreover, although randomised experiments can sometimes afford causal
-understanding, experimental studies are typically too expensive to
-perform at scale. Designing and implementing interventions and then
-tracking their effects over long periods are typically infeasible, and
-often decisions cannot wait. Experimental control often comes at the
-price of ecological validity, limiting applications. For these reasons,
-the bandwidth of psychologically interesting and practically relevant
+understanding, experimental studies are often expensive to perform at
+scale, and random assignment to treatment conditions can pose
+unacceptable ethical risks. Designing and implementing interventions and
+then tracking their effects over long periods are typically infeasible,
+and often decisions cannot wait. Experimental control often comes at the
+price of ecological validity, limiting direct applications in
+non-laboratory contexts. {[}Although see MIT Poverty Action lab for
+examples for examples of large scale RCTs.{]} For these reasons, the
+bandwidth of psychologically interesting and practically relevant
 questions that experiments may address is limited. By contrast,
 observational data is abundant. If we could obtain causal insights from
 observational data, the state of knowledge in environmental psychology
 would be greatly accelerated and the field would be better equipped to
-offer advice.
-
-Considerable progress in the methods for estimating causation from
-observational data during the past twenty years offer reasons for hope
-(\citeproc{ref-vanderweele2015}{VanderWeele 2015}). Although most of
-this progress has occurred outside of psychology, psychological
-scientists are growing increasingly interested in such methods
+offer advice. Considerable progress in the methods for estimating
+causation from observational data during the past 20 years offer reasons
+for hope (\citeproc{ref-vanderweele2015}{VanderWeele 2015}). Although
+most of this progress has occurred outside of psychology, interest
+amongst psychological scientists is growing
 (\citeproc{ref-mcelreath2020}{McElreath 2020};
 \citeproc{ref-rohrer2018}{Rohrer 2018}). Efforts to unite methods for
-causal inference with environmental psychology, then, would appear both
-promising and timely.
+causal inference with observational environmental psychology research is
+both promising and timely.
 
 We believe that rate of progress in the uptake of causal inference in
 environmental psychology (and in psychological science more broadly)
 will turn on how rapidly researchers understand the theoretical basis on
 which methods for causal inference rely. The theoretical basis of causal
 effect estimation is vital because to obtain causal effect estimates
-from observational data relies on assumptions. Put differently, before
+from observational data relies on assumptions. That is, before
 researchers apply statistical methods to data, they must devote
 considerable attention to planning and design than is their custom.
 Whether the assumptions required for causal inference are credibly met
@@ -298,258 +339,164 @@ from data researchers obtained from conventional thresholds they risk
 missing causal inferences that are supported by reasonable assumptions.
 On the other hand, researchers might be tempted to admit implausible
 assumptions without warrant. This latter risk is particularly worrying
-in those social sciences where publication biases favour results. Too
-few journals are interested in studies that report uncertainty, or that
-describe why results cannot be obtained from the data to hand. We
-believe that to accelerate progress in environmental psychology, and in
-the human sciences more generally, the theoretical foundations of causal
-inference must be accessible. The assumptions that underpin causal
-inference must be explained in a way that builds clear intuitions about
-the underlying problem each assumption addresses. Researchers must
-understand how these intuitions flow on to the tasks of data collection
-and data organisation. For causal inference to bring about the
-scientific transformation, each practical step from assumption to data
-collection must also be grounded in solid intuitions. Because the
-theoretical foundations of causal inference remain unfamilar and opaque
-to most psychological scientists, including those with strong
-backgrounds in statistical modelling, we believe that a gentle
-introduction focussed on developing the necessary intuitions and rigour
-habits may be useful.
+in those social sciences where publication biases favour compelling
+narratives couched in causal language, often with a one or two sentence
+caveat about strong causal attributions at the end of the paper. Too few
+journals are interested in studies that report uncertainty, or that
+provide detailed accounts of methodological limitations. . We believe
+that to accelerate progress in environmental psychology, and in the
+human sciences more generally, the theoretical foundations of causal
+inference must be accessible and transparently communicated. The
+assumptions that underpin causal inference must be explained in a way
+that builds a clear understanding about the underlying problem each
+assumption addresses. Researchers must understand how these assumptions
+flow on to the tasks of data collection and data organisation. For
+causal inference to bring about the scientific transformation, each
+practical step from assumption to data collection must also be grounded
+in solid intuitions. Because the theoretical foundations of causal
+inference remain unfamilar and opaque to most psychological scientists,
+including those with strong backgrounds in statistical modelling, we
+hope this introduction outlining the foundations of causal inference
+from association data will encourage more environmental psychologists to
+adopt these new conceptual frameworks and methods.
 
-Here, then, we present an introduction of the ``potential outcomes''
-framework of causal inference, also known as the ``counterfactual''
-framework for causal inference (\citeproc{ref-hernan2023}{Hernan and
-Robins 2023})).
+\subsection{Overview}\label{overview}
 
-\textbf{Part 1} introduces the \emph{the three fundamental assumptions}
-of causal inference. Here develop causal intuitions by anchoring them in
+In this chapter, we present an introduction of the ``potential
+outcomes'' framework of causal inference. This is also sometime referred
+to as the ``counterfactual'' framework (\citeproc{ref-hernan2023}{Hernan
+and Robins 2023})).
+
+\textbf{Part 1} introduces the the three fundamental assumptions of
+causal inference. Here we develop causal intuitions by anchoring them in
 the framework of randomised experiments, which will be familiar to most
-readers of this chapter. We shall discover that the building intuitions
-for causal inference from an understanding of experiments greatly
-demystify the assumptions on which causal inference relies and offers
-clear directives for data collection. Surprisingly, perhaps, this
-discussion will bring new theoretical understand of experiments that may
-be helpful to improving their designs.
+readers. We shall discover that the building intuitions for causal
+inference from an understanding of experiments help demystify the
+assumptions on which causal inference relies and offers clear directives
+for data collection. Surprisingly, perhaps, this discussion will bring
+new theoretical understanding of experiments that may be helpful to
+improving their designs.
 
 \textbf{Part 2} introduces Directed Acyclic Graphs (DAGs) -- or causal
 diagrams -- as powerful tools for investigating causal assumptions in
 observational settings, or in randomised experimental setting with
-repeated measures. We shall discover that the functionality of causal
-diagrams rests on three rules, and that these three rules in turn rest
-on a robust system of mathematical proofs. The basis of causal diagrams
-in mathematical proves should inspire confidence. The relative ease with
-which causal diagrams can be constructed in the absence of mathematical
+repeated measures. We note that the functionality of causal diagrams
+rests on three rules, and that these three rules, in turn, rest on a
+robust system of mathematical proofs, which we hope will inspire
+confidence in more sceptical readers. The relative ease with which
+causal diagrams can be constructed in the absence of mathematical
 formalism makes causal diagrams accessible. Yet we will learn that
 causal diagrams only make sense in relation to the framework of
 assumptions described in Part 1. Lacking a firm grasp of these
 assumptions, the application of causal diagrams to causal questions is
 perilous. We offer strategies for constructing causal diagrams that will
-help reserach use them safely and effectively, both in research design
-and modelling.
+help researchers use them safely and effectively, both in research
+design and modelling.
 
-\textbf{Part 3} Briefly reviews actionable directives for data
-collection and modelling within environmental psychology and related
-fields. This advice will be useful human scientists who seek
-quantitative understanding about the probable effects of interventions
-on environmental attitudes and behaviours.
+\textbf{Part 3} Briefly reviews actionable advice for improving causal
+inferences from observational data in environmental psychology
+researchers. This advice will be useful behavioural scientists who seek
+quantitative understanding of effects of policies and interventions on
+pro-environmental behaviour, and the well-being of the Planet Earth and
+those who inhabit it.
 
-\subsection{Part 1. An introduction to the potential outcomes framework
-of causal
-inference.}\label{part-1.-an-introduction-to-the-potential-outcomes-framework-of-causal-inference.}
+\subsection{Part 1: Introducing the Potential Outcomes Framework of
+Causal
+Inference}\label{part-1-introducing-the-potential-outcomes-framework-of-causal-inference}
 
-The content provided is both accurate and well-articulated, with a few
-minor exceptions. The below edits clarify some of the language and fix
-minor errors:
+The potential outcomes framework was introduced by Jerzy Neyman
+(\citeproc{ref-neyman1923}{Neyman 1923}). It was later developed by
+Donald Rubin to address causal inference in non-experimental settings
+(\citeproc{ref-rubin1976}{Rubin 1976}), and was extended by Jamie Robins
+to address confounding time-varying confounding
+(\citeproc{ref-robins1986}{Robins 1986}). A central focus of the
+framework is counterfactuals. The basic idea is that for any possible
+treatment, there are two potential outcomes:
 
-\subsection{Part 1: An Introduction to the Potential Outcomes Framework
-of Causal
-Inference}\label{part-1-an-introduction-to-the-potential-outcomes-framework-of-causal-inference}
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  The ``treatment'' outcome. The ``thing'' that happens if an individual
+  in the study receives the treatment.
+\item
+  The ``control'' outcome. The ``thing'' that happens if an individual
+  does not receive the treatment.
+\end{enumerate}
+
+In the potential outcomes framework, the causal effect of a treatment is
+defined as the difference between these two ``potential outcomes''. That
+is, what is the difference for an individual if they receive a treatment
+and if they did not receive the treatment?
+
+Importantly, we can never simultaneously observe both potential outcomes
+for a specific individual, given that they either receive the treatment
+or they don't. This problem is sometimes called the ``fundamental
+problem of causal inference'' (\citeproc{ref-holland1986}{Holland 1986};
+\citeproc{ref-rubin2005}{Rubin 2005}).
+
+This problem is addressed in experimental studies by comparing a group
+of individuals who receive the treatment with a group of individuals who
+do not. In observational studies, the problem of counterfactuals can be
+addressed by identifying and statistically controlling for potential
+confounding variables. The potential outcomes framework provides a
+highly structured way to managing confounders and making defensible
+causal inferences when using observational, as opposed to experimental
+data.
 
 \subsubsection{Step 1: Understand that we assess the relationships of
 cause and effect by contrasting the outcomes of
 interventions}\label{step-1-understand-that-we-assess-the-relationships-of-cause-and-effect-by-contrasting-the-outcomes-of-interventions}
 
-Suppose we are interested in well-being. Given this interest, we might
-be curious about understanding the factors that influence it. One such
-factor could be the accessibility of urban green spaces {[}CITE{]}. That
-is, living closer to abundant green spaces may enhance well-being
-compared to living in an environment devoid of such abundance. How might
-we obtain a quantitative causal understanding?
+In causal inference we begin by stating the causal contrast of interest
+as well as the population in whom we are interested.
 
-First, we define a `cause'. In a setting of causal inference, a cause is
-equivalent to an ``intervention'' or ``exposure'' or ``treatment.''
+Let's consider an example. Suppose we are interested in understanding
+the causal effect of accessibility to urban green spaces on
+psychological well-being (\citeproc{ref-nguyen2021green}{Nguyen \emph{et
+al.} 2021}; \citeproc{ref-reyes2021linking}{Reyes-Riveros \emph{et al.}
+2021}). For simplicity, we will refer to our outcome of interest as
+``subjective happiness'' or simply ``happiness'' and assume that the
+construct exists and can be measured. Let ``Y'' denote this construct,
+happiness. Similarly, for simplicity we will think of the treatment,
+``abundant access to green space'', as binary, and denote this treatment
+using the symbol \(A\). Let \(A = 1\) describe the condition, ``receives
+abundant access to greenspace.'' Let \(A = 0\) describe the condition,
+``does not receives abundant access to green space.'' We will assume
+that these conditions are mutually exclusive. Finally, let's suppose
+that the ``target population'' is the population of New Zealanders in
+the 2020s. A first stab at a causal question might be this:
 
-Second, we define an ``effect.'' In a setting of causal inference, an
-effect is the outcome of the intervention. To quantitatively understand
-the effect of a cause or intervention, we state a contrast of outcomes
-under two interventions at some scale of measurement. For example, the
-effect of abundant green spaces for individual \(i\) may be expressed
-as:
+``In New Zealand, does living closer to abundant green spaces enhance
+self-perceived happiness compared to living in an environment devoid of
+such abundance?'' Although this question is not yet well-defined, it
+makes a start for building intuition about what is involved when
+attempting causal inference in environmental psychology, namely, we must
+state our question in terms of a contrast between outcomes under
+different levels of an intervention for members of a specific
+population.
 
-\[
-\text{Well-being effect of abundant greenspace}_{i} = \text{Well-being of abundant green space}_i - \text{Well-being of no abundant green space}_i
-\]
+Now let us randomly select two individuals from the population of
+interest, ``Bex'' and ``Murray.'' Imagine that each individual receives
+a different treatment, Bex is given access to green space and Murray is
+denied such access. We measure happiness after the administration of
+each treatment. Thus:
 
-We could also express this contrast on a ratio scale:
+\[Y_{\text{Bex}}|A = 1 \]
 
-\[
-\text{Well-being effect of abundant greenspace}_i = \frac{\text{Well-being of abundant green space}_i}{\text{Well-being of no abundant green space}_i}
-\]
+which means ``Bex's happiness is observed in response to the treatment
+\emph{get's green space}.''
 
-\paragraph{\texorpdfstring{\textbf{Step 1.1: Quantifying a causal effect
-demands a contrast of
-interventions}}{Step 1.1: Quantifying a causal effect demands a contrast of interventions}}\label{step-1.1-quantifying-a-causal-effect-demands-a-contrast-of-interventions}
+Likewise:
 
-The concept of causal effect requires at least two potential
-interventions. Comparing outcomes under these different interventions
-provides insight into causation. For instance, contrasting an
-intervention against its absence always yields zero contrast in effects,
-represented mathematically as:
+\[Y_{\text{Murray}}|A = 1 \]
 
-\[
-\text{Effect of abundant greenspace} = \text{Effect of abundant green space} - \text{Effect of abundant green space} = 0
-\]
-
-The contrast of potential outcomes under different interventions offers
-evidence for causation when the contrast does not equal zero:
-
-\[
-\text{Causal effect of Do X} = \text{Causal effect of Do  X} - \text{Causal Effect of Do Not X} \neq 0
-\]
-
-Depending on the residual quantity, we can determine whether the effect
-is positive, negative, or null.
-
-\subsubsection{Step 2: Understand that causation occurs in
-time}\label{step-2-understand-that-causation-occurs-in-time}
-
-Causes are related to effects by time. We may say, ``each effect is
-borne of a cause.'' That is, at the scale of the the universe that
-people occupy, effects cannot precede their. Although intuitive, this
-concept is often overlooked in psychological science. For instance,
-causation requires that we assume:
+which means ``Murray's happiness is observed in response to the
+treatment \emph{does not get access to green space}.''
 
 \[
-\text{cause} \to \text{effect}
+Individual Treatment Effect: \text{Happiness (gets green space)}_{i} = \text{Happiness (gets green space)}_i - \text{Happiness (denied green space)}_i
 \]
-
-However, when we work with cross-sectional data, we cannot generally
-rule out:
-
-\[
-\text{labelled effect} \to \text{labelled cause}
-\]
-
-Therefore, we should be wary of cross-sectional data for causal
-inference.
-
-\subsubsection{Step 3: Understand that causal inference is requires
-contrasting ``potential'' (or ``counterfactual'') outcomes that are
-never fully
-observed.}\label{step-3-understand-that-causal-inference-is-requires-contrasting-potential-or-counterfactual-outcomes-that-are-never-fully-observed.}
-
-\paragraph{\texorpdfstring{\textbf{Proof by contradiction that
-individual causal effects are not
-observed.}}{Proof by contradiction that individual causal effects are not observed.}}\label{proof-by-contradiction-that-individual-causal-effects-are-not-observed.}
-
-Assume that individual causal effects can be fully observed. This
-implies that for an individual, we can observe both the effect of taking
-a decision (exposure to abundant green space) and not taking the
-decision (no living with abundant green space) simultaneously. However,
-by definition, an individual can only exist in one state at a time ---
-either one has green space access or they do not -- we cannot have both.
-
-This contradicts our initial assumption, leading us to conclude that
-individual causal effects can never be fully observed.
-
-Another proof is as follows:
-
-\paragraph{\texorpdfstring{\textbf{Direct proof individual causal
-effects are not
-observed.}}{Direct proof individual causal effects are not observed.}}\label{direct-proof-individual-causal-effects-are-not-observed.}
-
-Consider a scenario where the causal effect for an individual is
-understood as the difference in outcomes under two distinct scenarios
---- one where a decision is enacted (for example, enjoying green space)
-and one where it is not (devoid of green space).
-
-However, for any individual in a particular moment, only one of these
-circumstances can occur ---- the individual either embraces green space
-or they do not. We can only observe the outcome corresponding to the
-actual decision made, but we cannot observe the outcome for the
-counterfactual scenario (the decision not enacted).
-
-In the language of causal inference, individual causal effects encounter
-the ``fundamental problem of causal inference''
-(\citeproc{ref-holland1986}{Holland 1986};
-\citeproc{ref-rubin1976}{Rubin 1976}). That is, individual causal
-effects are necessarily only partially observed.
-
-\paragraph{\texorpdfstring{\textbf{Step 3.1: The implication: causal
-inference requires solving a special and peculiar missing data
-problem}}{Step 3.1: The implication: causal inference requires solving a special and peculiar missing data problem}}\label{step-3.1-the-implication-causal-inference-requires-solving-a-special-and-peculiar-missing-data-problem}
-
-If we are to quantify causal effects, our challenge is to bridge the gap
-between the observable world and the inherently unobservable world.
-Causal inference is a missing data problem (Westreich \emph{et al.}
-(\citeproc{ref-westreich2015}{2015}); Edwards \emph{et al.}
-(\citeproc{ref-edwards2015}{2015}))
-
-\subsubsection{Step 4: Understand that the problem of missing
-counterfactual is easier to solve when the target of inference is the
-average (or marginal) causal effect obtained from an
-experiment}\label{step-4-understand-that-the-problem-of-missing-counterfactual-is-easier-to-solve-when-the-target-of-inference-is-the-average-or-marginal-causal-effect-obtained-from-an-experiment}
-
-The average causal effect represents the difference in average outcomes
-of a population under two distinct treatment conditions. In formal
-terms, the average causal effect of a treatment (A) on an outcome (Y)
-can be defined as follows:
-
-\[
-\text{Average Causal Effect} = \mathbb{E}[Y(A = 1)] - \mathbb{E}[Y(A = 0)]
-\]
-
-where \(\mathbb{E}[Y(A = a)]\) denotes the expected value of the outcome
-under treatment condition \(A = a\). Here, \(A = 1\) indicates the
-presence of the treatment, while \(A = 0\) represents its absence.
-
-\paragraph{Step 4.1 Understand that the problem of missing
-counterfactual outcomes remains for average treatment
-effects.}\label{step-4.1-understand-that-the-problem-of-missing-counterfactual-outcomes-remains-for-average-treatment-effects.}
-
-Thatt the problem of missing counterfactuals remains for average
-treatment effects becomes evident when we consider a scenario involving
-two contrasting states: the presence of treatment (\(A = 1\)) and the
-absence of treatment (\(A = 0\)).
-
-If an individual is subjected to treatment, we observe the outcome
-\(Y_{\text{observed}_i}|A_i = 1\), but miss the counterfactual outcome
-\(Y(A_i = 0)\), i.e., the outcome if the individual had not received the
-treatment.
-
-Similarly, if the treatment is not administered, we observe
-\(Y_{\text{observed}_i}|A_i = 0\), but miss the counterfactual outcome
-\(Y(A_i = 1)\).
-
-Thus, for each individual, only one of the potential outcomes is
-observed, and the other one is missing. The challenge is that we cannot
-compute the individual causal effect, \(Y(A_i = 1) - Y(A_i = 0)\),
-because we only observe one of the two terms for each individual.
-
-To compute the average causal effect over a population, we should
-ideally sum these individual causal effects and divide by the population
-size:
-
-\[
-\text{Average Causal Effect} = \frac{1}{N}\sum_{i=1}^{N} [Y(A_i = 1) - Y(A_i = 0)]
-\]
-
-However, as we only observe one term of the subtracted pair for each
-individual, we cannot calculate this sum directly. We again encounter
-the fundamental problem in causal inference when calculate average
-causal effects: the problem of individual-level missing counterfactuals
-persists ``under the hood'' of each intervention that we seek to
-compare.
 
 \paragraph{Step 4.2 Understand how experiments satisfy assumptions need
 to impute missing responses that are needed to obtain average treatment
@@ -1801,12 +1748,6 @@ Cook, TD, Campbell, DT, and Shadish, W (2002) \emph{Experimental and
 quasi-experimental designs for generalized causal inference}, Vol. 1195,
 Houghton Mifflin Boston, MA.
 
-\bibitem[\citeproctext]{ref-edwards2015}
-Edwards, JK, Cole, SR, and Westreich, D (2015) All your data are always
-missing: Incorporating bias due to measurement error into the potential
-outcomes framework. \emph{International Journal of Epidemiology},
-\textbf{44}(4), 14521459.
-
 \bibitem[\citeproctext]{ref-greenland1999}
 Greenland, S, Pearl, J, and Robins, JM (1999) Causal diagrams for
 epidemiologic research. \emph{Epidemiology (Cambridge, Mass.)},
@@ -1826,6 +1767,10 @@ doi:\href{https://doi.org/10.1136/bmj.p1135}{10.1136/bmj.p1135}.
 Holland, PW (1986) Statistics and causal inference. \emph{Journal of the
 American Statistical Association}, \textbf{81}(396), 945960.
 
+\bibitem[\citeproctext]{ref-mancuso2018revolutionary}
+Mancuso, S (2018) \emph{The revolutionary genius of plants: A new
+understanding of plant intelligence and behavior}, Simon; Schuster.
+
 \bibitem[\citeproctext]{ref-mathur2018}
 Mathur, MB, Ding, P, Riddell, CA, and VanderWeele, TJ (2018) Website and
 r package for computing {E}-values. \emph{Epidemiology (Cambridge,
@@ -1835,6 +1780,18 @@ Mass.)}, \textbf{29}(5), e45.
 McElreath, R (2020) \emph{Statistical rethinking: A {B}ayesian course
 with examples in r and stan}, CRC press.
 
+\bibitem[\citeproctext]{ref-neyman1923}
+Neyman, JS (1923) On the application of probability theory to
+agricultural experiments. Essay on principles. Section 9.(tlanslated and
+edited by dm dabrowska and tp speed, statistical science (1990), 5,
+465-480). \emph{Annals of Agricultural Sciences}, \textbf{10}, 151.
+
+\bibitem[\citeproctext]{ref-nguyen2021green}
+Nguyen, P-Y, Astell-Burt, T, Rahimi-Ardabili, H, and Feng, X (2021)
+Green space quality and health: A systematic review. \emph{International
+Journal of Environmental Research and Public Health}, \textbf{18}(21),
+11028.
+
 \bibitem[\citeproctext]{ref-pearl1995}
 Pearl, J (1995) Causal diagrams for empirical research.
 \emph{Biometrika}, \textbf{82}(4), 669--688.
@@ -1842,6 +1799,18 @@ Pearl, J (1995) Causal diagrams for empirical research.
 \bibitem[\citeproctext]{ref-pearl2009}
 Pearl, J (2009) \emph{\href{https://doi.org/10.1214/09-SS057}{Causal
 inference in statistics: An overview}}.
+
+\bibitem[\citeproctext]{ref-reyes2021linking}
+Reyes-Riveros, R, Altamirano, A, De La Barrera, F, Rozas-Vásquez, D,
+Vieli, L, and Meli, P (2021) Linking public urban green spaces and human
+well-being: A systematic review. \emph{Urban Forestry \& Urban
+Greening}, \textbf{61}, 127105.
+
+\bibitem[\citeproctext]{ref-robins1986}
+Robins, J (1986) A new approach to causal inference in mortality studies
+with a sustained exposure period---application to control of the healthy
+worker survivor effect. \emph{Mathematical Modelling}, \textbf{7}(9-12),
+1393--1512.
 
 \bibitem[\citeproctext]{ref-rohrer2018}
 Rohrer, JM (2018) Thinking clearly about correlations and causation:
@@ -1852,6 +1821,12 @@ Methods and Practices in Psychological Science}, \textbf{1}(1), 2742.
 Rubin, DB (1976) Inference and missing data. \emph{Biometrika},
 \textbf{63}(3), 581--592.
 doi:\href{https://doi.org/10.1093/biomet/63.3.581}{10.1093/biomet/63.3.581}.
+
+\bibitem[\citeproctext]{ref-rubin2005}
+Rubin, DB (2005) Causal inference using potential outcomes: Design,
+modeling, decisions. \emph{Journal of the American Statistical
+Association}, \textbf{100}(469), 322--331. Retrieved from
+\url{https://www.jstor.org/stable/27590541}
 
 \bibitem[\citeproctext]{ref-vanderweele2009}
 VanderWeele, TJ (2009) Concerning the consistency assumption in causal
@@ -1885,12 +1860,6 @@ studies. \emph{Statistical Science}, \textbf{35}(3), 437466.
 Westreich, D, and Cole, SR (2010) Invited commentary: positivity in
 practice. \emph{American Journal of Epidemiology}, \textbf{171}(6).
 doi:\href{https://doi.org/10.1093/aje/kwp436}{10.1093/aje/kwp436}.
-
-\bibitem[\citeproctext]{ref-westreich2015}
-Westreich, D, Edwards, JK, Cole, SR, Platt, RW, Mumford, SL, and
-Schisterman, EF (2015) Imputation approaches for potential outcomes in
-causal inference. \emph{International Journal of Epidemiology},
-\textbf{44}(5), 17311737.
 
 \end{CSLReferences}
 
